[package]
name = "lark-span"
version = "0.1.0"
authors = ["Yehuda Katz <wycats@gmail.com>"]
edition = "2018"
description = "Represents spans of Lark code in the Lark compiler."
readme = "readme.md"
keywords = ["lark"]
license = "MIT License OR Apache License 2.0"
license-file = "../LICENSE-APACHE OR ../LICENSE-MIT"
repository = "https://github.com/lark-exploration/lark/tree/master/components/lark-span"

[dependencies]
derive-new = "0.5.6"
lark-debug-derive = { path = "../lark-debug-derive", version = "0.1.0" }
lark-string = { path = "../lark-string", version = "0.1.0" }
lark-debug-with = { path = "../lark-debug-with", version = "0.1.0" }
lark-intern = { path = "../lark-intern", version = "0.1.0" }
languageserver-types = "0.53"
language-reporting = { git = "https://github.com/nikomatsakis/language-reporting", branch = "remove-codespan-dep" }
