[package]
name = "lark-string"
version = "0.1.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
edition = "2018"

[dependencies]
lark-debug-with = { path = "../lark-debug-with" }
lark-intern = { path = "../lark-intern" }
lark-indices = { path = "../lark-indices" }
parking_lot = "0.7"

[dev-dependencies]
lark-collections = { path = "../lark-collections" }