[package]
name = "lark-test"
version = "0.1.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
edition = "2018"

[dependencies]
diff = "0.1.0"
env_logger = "0.5.13"
languageserver-types = "0.51.0"
lark-debug-with = { path = "../lark-debug-with" }
lark-cli = { path = "../lark-cli" }
lark-entity = { path = "../lark-entity" }
lark-error = { path = "../lark-error" }
lark-eval = { path = "../lark-eval" }
lark-eval-hir = { path = "../lark-eval-hir" }
lark-hir = { path = "../lark-hir" }
lark-intern = { path = "../lark-intern" }
lark-language-server = { path = "../lark-language-server" }
lark-query-system = { path = "../lark-query-system" }
lark-parser = { path = "../lark-parser" }
lark-seq = { path = "../lark-seq" }
lark-span = { path = "../lark-span" }
lark-string = { path = "../lark-string" }
lark-ty = { path = "../lark-ty" }
lark-type-check = { path = "../lark-type-check" }
lark-collections = { path = "../lark-collections" }
lazy_static = "1.2.0"
rayon = "1.0.3"
regex = "1"
salsa = "0.8.0"
serde = "1"
serde_json = "1"
termcolor = "1.0.4"
url = "1.7"
walkdir = "2.2.7"
