[package]
name = "lark-test"
version = "0.1.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
edition = "2018"
description = "Testing framework for running tests against the Lark compiler."
readme = "readme.md"
keywords = ["lark"]
license = "MIT License OR Apache License 2.0"
license-file = "../LICENSE-APACHE OR ../LICENSE-MIT"
repository = "https://github.com/lark-exploration/lark/tree/master/components/lark-test"

[dependencies]
diff = "0.1.11"
env_logger = "0.6"
languageserver-types = "0.53"
lark-collections = { path = "../lark-collections" }
lark-debug-with = { path = "../lark-debug-with" }
lark-cli = { path = "../lark-cli" }
lark-entity = { path = "../lark-entity" }
lark-error = { path = "../lark-error" }
lark-eval = { path = "../lark-eval" }
lark-hir = { path = "../lark-hir" }
lark-intern = { path = "../lark-intern" }
lark-language-server = { path = "../lark-language-server" }
lark-query-system = { path = "../lark-query-system" }
lark-parser = { path = "../lark-parser" }
lark-span = { path = "../lark-span" }
lark-string = { path = "../lark-string" }
lark-ty = { path = "../lark-ty" }
lark-type-check = { path = "../lark-type-check" }
lazy_static = "1.2.0"
rayon = "1.0.3"
regex = "1"
salsa = "0.9"
serde = "1"
serde_json = "1"
termcolor = "1.0.4"
url = "1.7"
walkdir = "2.2.7"
