[package]
name = "lark-test"
version = "0.1.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
edition = "2018"
description = "Testing framework for running tests against the Lark compiler."
readme = "readme.md"
keywords = ["lark"]
license-file = "../../LICENSE-APACHE OR ../../LICENSE-MIT"
repository = "https://github.com/lark-exploration/lark/tree/master/components/lark-test"

[dependencies]
diff = "0.1.11"
env_logger = "0.6"
languageserver-types = "0.54"
lark-collections = { path = "../lark-collections", version = "0.1.0" }
lark-debug-with = { path = "../lark-debug-with", version = "0.1.0" }
lark-cli = { path = "../lark-cli", version = "0.1.0" }
lark-entity = { path = "../lark-entity", version = "0.1.0" }
lark-error = { path = "../lark-error", version = "0.1.0" }
lark-eval = { path = "../lark-eval", version = "0.1.0" }
lark-hir = { path = "../lark-hir", version = "0.1.0" }
lark-intern = { path = "../lark-intern", version = "0.1.0" }
lark-language-server = { path = "../lark-language-server", version = "0.1.0" }
lark-query-system = { path = "../lark-query-system", version = "0.1.0" }
lark-parser = { path = "../lark-parser", version = "0.1.0" }
lark-span = { path = "../lark-span", version = "0.1.0" }
lark-string = { path = "../lark-string", version = "0.1.0" }
lark-ty = { path = "../lark-ty", version = "0.1.0" }
lark-type-check = { path = "../lark-type-check", version = "0.1.0" }
lazy_static = "1.2.0"
rayon = "1.0.3"
regex = "1"
salsa = "0.10.0-alpha1"
serde = "1"
serde_json = "1"
termcolor = "1.0.4"
url = "1.7"
walkdir = "2.2.7"
