[package]
name = "lark-ty"
version = "0.1.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
edition = "2018"
description = "Representation of a type in the Lark compiler."
readme = "readme.md"
keywords = ["lark"]
license = "MIT License OR Apache License 2.0"
license-file = "../LICENSE-APACHE OR ../LICENSE-MIT"
repository = "https://github.com/lark-exploration/lark/tree/master/components/lark-ty"

[dependencies]
derive-new = "0.5.6"
parking_lot = "0.7"

lark-collections = { path = "../lark-collections" }
lark-debug-derive = { path = "../lark-debug-derive" }
lark-debug-with = { path = "../lark-debug-with" }
lark-intern = { path = "../lark-intern" }
lark-error = { path = "../lark-error" }
lark-entity = { path = "../lark-entity" }
lark-string = { path = "../lark-string" }
lark-unify = { path = "../lark-unify" }