[package]
name = "lark-type-check"
version = "0.1.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
edition = "2018"

[dependencies]
datafrog = "1.0.0"
derive-new = "0.5.6"
parking_lot = "0.7"
generational-arena = "0.2.0"
lark-collections = { path = "../lark-collections" }
lark-debug-derive = { path = "../lark-debug-derive" }
lark-debug-with = { path = "../lark-debug-with" }
lark-indices = { path = "../lark-indices" }
lark-intern = { path = "../lark-intern" }
lark-error = { path = "../lark-error" }
lark-entity = { path = "../lark-entity" }
lark-hir = { path = "../lark-hir" }
lark-parser = { path = "../lark-parser" }
lark-pretty-print = { path = "../lark-pretty-print" }
lark-string = { path = "../lark-string" }
lark-ty = { path = "../lark-ty" }
lark-unify = { path = "../lark-unify" }
log = "0.4.6"
salsa = "0.8"
