[package]
name = "lark-type-check"
version = "0.1.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
edition = "2018"
description = "The type checking functionality of the Lark compiler."
readme = "readme.md"
keywords = ["lark"]
license = "MIT License OR Apache License 2.0"
license-file = "../LICENSE-APACHE OR ../LICENSE-MIT"
repository = "https://github.com/lark-exploration/lark/tree/master/components/lark-type-check"

[dependencies]
datafrog = "2.0.1"
derive-new = "0.5.6"
parking_lot = "0.7"
generational-arena = "0.2.0"
lark-collections = { path = "../lark-collections" }
lark-debug-derive = { path = "../lark-debug-derive" }
lark-debug-with = { path = "../lark-debug-with" }
lark-intern = { path = "../lark-intern" }
lark-error = { path = "../lark-error" }
lark-entity = { path = "../lark-entity" }
lark-hir = { path = "../lark-hir" }
lark-parser = { path = "../lark-parser" }
lark-pretty-print = { path = "../lark-pretty-print" }
lark-string = { path = "../lark-string" }
lark-ty = { path = "../lark-ty" }
lark-unify = { path = "../lark-unify" }
log = "0.4.6"
salsa = "0.9"
