[package]
name = "lark-type-check"
version = "0.1.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
edition = "2018"
description = "The type checking functionality of the Lark compiler."
readme = "readme.md"
keywords = ["lark"]
license = "MIT License OR Apache License 2.0"
license-file = "../../LICENSE-APACHE OR ../../LICENSE-MIT"
repository = "https://github.com/lark-exploration/lark/tree/master/components/lark-type-check"

[dependencies]
datafrog = "2.0.1"
derive-new = "0.5.6"
parking_lot = "0.7"
generational-arena = "0.2.0"
lark-collections = { path = "../lark-collections", version = "0.1.0"  }
lark-debug-derive = { path = "../lark-debug-derive", version = "0.1.0"  }
lark-debug-with = { path = "../lark-debug-with", version = "0.1.0"  }
lark-intern = { path = "../lark-intern", version = "0.1.0"  }
lark-error = { path = "../lark-error", version = "0.1.0"  }
lark-entity = { path = "../lark-entity", version = "0.1.0"  }
lark-hir = { path = "../lark-hir", version = "0.1.0"  }
lark-parser = { path = "../lark-parser", version = "0.1.0"  }
lark-pretty-print = { path = "../lark-pretty-print", version = "0.1.0"  }
lark-string = { path = "../lark-string", version = "0.1.0"  }
lark-ty = { path = "../lark-ty", version = "0.1.0"  }
lark-unify = { path = "../lark-unify", version = "0.1.0"  }
log = "0.4.6"
salsa = "0.9"
