[package]
name = "lark-unify"
version = "0.1.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
edition = "2018"
description = "The type unification functionality of the Lark compiler."
readme = "readme.md"
keywords = ["lark"]
license = "MIT License OR Apache License 2.0"
license-file = "../LICENSE-APACHE OR ../LICENSE-MIT"
repository = "https://github.com/lark-exploration/lark/tree/master/components/lark-unify"

[dependencies]
lark-collections = { path = "../lark-collections", version = "0.1.0" }
lark-debug-with = { path = "../lark-debug-with", version = "0.1.0" }
