[package]
name = "parser"
version = "0.1.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
edition = "2018"

[dependencies]
codespan = "0.1.3"
derive-new = "0.5.5"
lalrpop-util = "0.16.0"
lazy_static = "1.1.0"
log = "0.4.5"
itertools = "0.7.8"
seahash = "3.0.5"
smart-default = "0.2.0"
unicode-xid = "0.1.0"
language-reporting = { git = "https://github.com/wycats/language-reporting.git" }
termcolor = "1.0.4"
debug = { path = "../debug" }
map = { path = "../map" }

[dev-dependencies]
unindent = "0.1.3"
pretty_env_logger = "0.2"
