[package]
name = "parser"
version = "0.1.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
edition = "2018"

[dependencies]
codespan = "0.2.0"
derive-new = "0.5.5"
lalrpop-util = "0.16.0"
lazy_static = "1.1.0"
log = "0.4.5"
intern = { path = "../intern" }
itertools = "0.7.8"
lark-debug-derive = { path = "../lark-debug-derive" }
lark-string = { path = "../lark-string" }
seahash = "3.0.5"
smart-default = "0.2.0"
unicode-xid = "0.1.0"
language-reporting = "0.2.0"
termcolor = "1.0.4"
bimap = "0.1.5"
debug = { path = "../debug" }
map = { path = "../map" }
salsa = "0.8.0"
parking_lot = "0.6.4"

[dev-dependencies]
unindent = "0.1.3"
pretty_env_logger = "0.2"
