[package]
name = "parser3"
version = "0.1.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
edition = "2018"

[dependencies]
debug = { path = "../debug" }
derive-new = "0.5.5"
indices = { path = "../indices" }
itertools = "0.7.8"
lark-debug-derive = { path = "../lark-debug-derive" }
lark-error = { path = "../lark-error" }
lark-string = { path = "../lark-string" }
log = "0.4.5"
map = { path = "../map" }
parser = { path = "../parser" }
salsa = "0.8.0"
parking_lot = "0.6.4"
unicode-xid = "0.1.0"

[dev-dependencies]
unindent = "0.1.3"
pretty_env_logger = "0.2"

